# rulebooks-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
docker/: docker-compose.yml
notebooks/: exploration.ipynb
scripts/: init_db.py  inspect_rulebook.py
src/: __init__.py
src/chunking/: __init__.py  chunk_builder.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  database.py  models.py  schema.sql
src/embeddings/: __init__.py  embedder.py
src/graph/: __init__.py  document_graph.py  graph_builder.py
src/ingestion/: __init__.py  mini_page_detector.py  parse_loader.py
src/models/: __init__.py  schema.py
src/qa/: __init__.py  rag_pipeline.py
src/retrieval/: __init__.py  retrieval_filter.py  retriever.py  vector_index.py
src/tracing/: __init__.py  trace_logger.py
src/utils/: __init__.py  bbox_utils.py
tests/: __init__.py  conftest.py  test_chunking.py  test_graph.py  test_ingestion.py  test_models.py  test_utils.py
